<resources>
    <string name="app_name">Reader parametrs</string>
    <string name="key">KEY</string>
    <string name="switch1">Switch</string>
    <string name="Home">Главная</string>
    <string name="Read">Читать</string>
    <string name="Reset">Очистить</string>
    <string name="Write">Записать</string>
    <string name="connect">Подключиться</string>
    <string name="disc">Отключиться</string>
    <string name="command">Введите команду</string>
    <string name="submit">Отправить</string>

</resources>